tests/error/complex_too_big.gw
// [contains] extraneous component of complex value...
 #(0,0,0,0);
